--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="Keywords" content="slot gacor, Panen77, bocoran slot, daftar slot online, slot online, situs slot, judi online, judi slot online, slot terbaik, situs slot terpercaya, slot online terpercaya, slot mudah menang"/>
         <link itemprop="mainEntityOfPage" rel="canonical" href="https://www.louisecooper.com/"/>
         <meta name="robots" content="index, follow"/>
+        <meta name="google-site-verification" content="H5gehvNnEpWagr6QIyJOb-vm1xVqeqkbDFMk9QLO3kc" />
         <meta name="page-locale" content="id,en">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta content="true" name="HandheldFriendly">
