--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html ⚡ lang="id">
 <head>
@@ -78,10 +76,10 @@
       <div class="col-md-8">
         <div class="row logform">
           <div class="col-xs-6">
-            <a href="https://94.237.2.64/" target="_blank"><button type="login" class="btn btn-log">LOGIN</button></a>
+            <a href="https://rebrand.ly/ref_panen77" target="_blank"><button type="login" class="btn btn-log">LOGIN</button></a>
           </div>
           <div class="col-xs-6">
-            <a href="https://94.237.2.64/" rel="nofollow" target="_blank"><span class="blink-me"><button type="login" class="btn btn-daf">DAFTAR</button></span></a>
+            <a href="https://rebrand.ly/ref_panen77" rel="nofollow" target="_blank"><span class="blink-me"><button type="login" class="btn btn-daf">DAFTAR</button></span></a>
           </div>
         </div>
       </div>
@@ -93,9 +91,9 @@
     </div>
     <div class="row my-3">
       <div class="col-md-4 mb-2">
-        <a class="social-card mt-2 anim blink-me" href="https://94.237.2.64/" rel="nofollow" target="_blank"><amp-img class="align-middle" style="margin-right: 15px;" width="57px" height="57px" src="https://i.ibb.co/rFFjvbW/register.png" alt="Daftar Panen77"></amp-img>DAFTAR</a>
-        <a class="social-card mt-4" href="https://94.237.2.64/" rel="nofollow" target="_blank"><amp-img class="align-middle" style="margin-right: 15px;" width="57px" height="57px" src="https://i.ibb.co/s2pVbkL/whatsapp.png" alt="WHATSAPP Panen77"></amp-img>WHATSAPP</a>
-        <a class="social-card mt-4" href="https://94.237.2.64/" rel="nofollow" target="_blank"><amp-img class="align-middle" style="margin-right: 15px;" width="57px" height="57px" src="https://i.ibb.co/D8GdpYd/livechat.png" alt="LIVECHAT Panen77"></amp-img>LIVECHAT</a>
+        <a class="social-card mt-2 anim blink-me" href="https://rebrand.ly/ref_panen77" rel="nofollow" target="_blank"><amp-img class="align-middle" style="margin-right: 15px;" width="57px" height="57px" src="https://i.ibb.co/rFFjvbW/register.png" alt="Daftar Panen77"></amp-img>DAFTAR</a>
+        <a class="social-card mt-4" href="https://rebrand.ly/ref_panen77" rel="nofollow" target="_blank"><amp-img class="align-middle" style="margin-right: 15px;" width="57px" height="57px" src="https://i.ibb.co/s2pVbkL/whatsapp.png" alt="WHATSAPP Panen77"></amp-img>WHATSAPP</a>
+        <a class="social-card mt-4" href="https://rebrand.ly/ref_panen77" rel="nofollow" target="_blank"><amp-img class="align-middle" style="margin-right: 15px;" width="57px" height="57px" src="https://i.ibb.co/D8GdpYd/livechat.png" alt="LIVECHAT Panen77"></amp-img>LIVECHAT</a>
       </div>
       <div class="col-md-4 mb-2 nopadding">
         <div class="slide mt-2">
@@ -122,10 +120,10 @@
     <div class="row p-0" style="background-color: #020202;">
       <div class="col-md-6 pt-3 p-0 text-center">
         <div class="row">
-          <div class="col-xs-6"><a href="#" rel="nofollow noopener noreferrer"><amp-img src="https://i.ibb.co/PWgntKD/android.png" width="168px" height="50px" layout="responsive" alt="situs slot online"></amp-img></a>
+          <div class="col-xs-6"><a href="https://rebrand.ly/ref_panen77" rel="nofollow noopener noreferrer"><amp-img src="https://i.ibb.co/PWgntKD/android.png" width="168px" height="50px" layout="responsive" alt="situs slot online"></amp-img></a>
           </div>
           <div class="col-xs-6">
-          <a href="#" rel="nofollow noopener noreferrer"><amp-img src="https://i.ibb.co/ZJVsk5h/ios.png" width="168px" height="50px" layout="responsive" alt="aplikasi slot online"></amp-img></a>
+          <a href="https://rebrand.ly/ref_panen77" rel="nofollow noopener noreferrer"><amp-img src="https://i.ibb.co/ZJVsk5h/ios.png" width="168px" height="50px" layout="responsive" alt="aplikasi slot online"></amp-img></a>
           </div>
         </div>  
       </div>
